ledger/sparse-struct/tests/ui/tuple-many-elements.stderr
error: cannot find derive macro `SparseStruct` in this scope
 --> tests/ui/tuple-many-elements.rs:1:10
  |
1 | #[derive(SparseStruct)]
  |          ^^^^^^^^^^^^
  |
help: consider importing this derive macro
  |
1 + use sparse_struct::SparseStruct;
  |
